página contact realizada

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="navbar gap-3 justify-content-end col-6">
          
           <a  href="#"class="btn btn-sm btn-secondary"  role="button">HOME</a>
-          <a  href="pages/upcoming_events.html" class="btn btn-sm  btn-outline-light" role="button"">Upcoming Events</a>
-          <a href="./pages/past_events.html" class="btn btn-sm btn-outline-light" type="button">Past Events</a>
+          <a  href="./pages/upcoming_events.html" class="btn btn-sm  btn-outline-light" role="button"">Upcoming Events</a>
+          <a href="./pages/past_events.html" class="btn btn-sm btn-outline-light" role="button">Past Events</a>
           <a href="./pages/contact.html" class="btn btn-sm btn-outline-light"role="button">Contact</a>
           <a href="./pages/stats.html" class="btn btn-sm btn-outline-light" role="button">Stats</a>
         </div>
