--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -27,9 +27,9 @@
          
           <a  href="../index.html"class="btn btn-sm btn-outline-light"  role="button">Home</a>
           <a  href="#" class="btn btn-sm  btn-secondary" role="button"">Upcoming Events</a>
-          <a href="./pages/past_events.html" class="btn btn-sm btn-outline-light" type="button">Past Events</a>
-          <a href="./pages/contact.html" class="btn btn-sm btn-outline-light"role="button">Contact</a>
-          <a href="./pages/stats.html" class="btn btn-sm btn-outline-light" role="button">Stats</a>
+          <a href="./past_events.html" class="btn btn-sm btn-outline-light" role="button">Past Events</a>
+          <a href="./contact.html" class="btn btn-sm btn-outline-light"role="button">Contact</a>
+          <a href="./stats.html" class="btn btn-sm btn-outline-light" role="button">Stats</a>
         </div>
       </form>
     </nav>
