--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../assets/styles/style.css">
 
-  <title>Upcoming</title>
+  <title>Past Events</title>
 </head>
 
 <body>
@@ -26,10 +26,10 @@
         <div class="navbar gap-3 justify-content-end col-6">
          
           <a  href="../index.html"class="btn btn-sm btn-outline-light"  role="button">Home</a>
-          <a  href="#" class="btn btn-sm  btn-secondary" role="button"">Upcoming Events</a>
-          <a href="./pages/past_events.html" class="btn btn-sm btn-outline-light" type="button">Past Events</a>
-          <a href="./pages/contact.html" class="btn btn-sm btn-outline-light"role="button">Contact</a>
-          <a href="./pages/stats.html" class="btn btn-sm btn-outline-light" role="button">Stats</a>
+          <a  href="./upcoming_events.html" class="btn btn-sm  btn-outline-light" role="button"">Upcoming Events</a>
+          <a href="#" class="btn btn-sm btn-secondary" role="button">Past Events</a>
+          <a href="./contact.html" class="btn btn-sm btn-outline-light"role="button">Contact</a>
+          <a href="./stats.html" class="btn btn-sm btn-outline-light" role="button">Stats</a>
         </div>
       </form>
     </nav>
@@ -38,7 +38,7 @@
   <main>
     <div class=" navbar line container-fluid ">
       <h1> <i class="bi bi-arrow-bar-left"></i></h1>
-      <h1></i>Upcoming Events</h1>
+      <h1></i>Past Events</h1>
       <h1> <i class="bi bi-arrow-bar-right"></i></h1>
     </div>
 
