--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./assets/img/favicon-AmazingEvents.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,700;1,100;1,200;1,400&display=swap" rel="stylesheet">
+
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
   <link rel="stylesheet" href="https://kit.fontawesome.com/6a58896509.css" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./assets/styles/style.css">
 
-  <title>Document</title>
+  <title>Home</title>
 </head>
 
 <body>
@@ -20,12 +26,12 @@
     <nav class="navbar line ">
 
       <form class="container-fluid justify-content-start col-12 my-3">
-        <div class="col-5 ms-3">
+        <div class="col-5 ms-3 ">
           <img src="./assets/img/Logo Amazing Events.png" alt="logo">
         </div>
         <div class="navbar gap-3 justify-content-end col-6">
          
-          <a  href="#"class="btn btn-sm btn-secondary"  role="button">HOME</a>
+          <a  href="#"class="btn btn-sm btn-secondary"  role="button">Home</a>
           <a  href="./pages/upcoming_events.html" class="btn btn-sm  btn-outline-light" role="button"">Upcoming Events</a>
           <a href="./pages/past_events.html" class="btn btn-sm btn-outline-light" role="button">Past Events</a>
           <a href="./pages/contact.html" class="btn btn-sm btn-outline-light"role="button">Contact</a>
@@ -38,7 +44,7 @@
   <main>
     <div class=" navbar line container-fluid ">
       <h1> <i class="bi bi-arrow-bar-left"></i></h1>
-      <h1></i>HOME </h1>
+      <h1 class="shadow">HOME </h1>
       <h1> <i class="bi bi-arrow-bar-right"></i></h1>
     </div>
 
@@ -120,8 +126,7 @@
         <img src="./assets/img/Costume_Party.jpg" class="card-img-top p-3" alt="party">
         <div class="card-body">
           <h5 class="card-title text-center">Title</h5>
-          <p class="card-text text-center">text description
-            </p>
+          <p class="card-text text-center">text description            </p>
           <div class="navbar">
             <p>Price $100</p>
             <a href="#" class="btn btn-sm btn-new">Go somewhere</a>
