--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../assets/img/favicon-AmazingEvents.ico" type="image/x-icon">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,700;1,100;1,200;1,400&display=swap" rel="stylesheet">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="https://kit.fontawesome.com/6a58896509.css" crossorigin="anonymous">
@@ -38,7 +43,7 @@
   <main>
     <div class=" navbar line container-fluid ">
       <h1> <i class="bi bi-arrow-bar-left"></i></h1>
-      <h1></i>Upcoming Events</h1>
+      <h1 class="shadow">UPCOMING EVENTS</h1>
       <h1> <i class="bi bi-arrow-bar-right"></i></h1>
     </div>
 
