--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </p>
                 <div class="navbar">
                   <p>Price $100</p>
-                  <a href="#" class="btn btn-sm btn-new">Go somewhere</a>
+                  <a href="./pages/details.html#card-one" class="btn btn-sm btn-new">Go Details</a>
                 </div>
               </div>
             </div>
@@ -132,7 +132,7 @@
                 </p>
                 <div class="navbar">
                   <p>Price $100</p>
-                  <a href="#" class="btn btn-sm btn-new">Go somewhere</a>
+                  <a href="./pages/details.html#card-two" class="btn btn-sm btn-new">Go Details</a>
                 </div>
               </div>
             </div>
@@ -143,7 +143,7 @@
                 <p class="card-text text-center">text description </p>
                 <div class="navbar">
                   <p>Price $100</p>
-                  <a href="#" class="btn btn-sm btn-new">Go somewhere</a>
+                  <a href="./pages/details.html#card-three" class="btn btn-sm btn-new">Go Details</a>
                 </div>
               </div>
             </div>
@@ -155,7 +155,7 @@
                 </p>
                 <div class="navbar">
                   <p>Price $100</p>
-                  <a href="#" class="btn btn-sm btn-new">Go somewhere</a>
+                  <a href="./pages/details.html#card-four" class="btn btn-sm btn-new">Go Details</a>
                 </div>
               </div>
             </div>
@@ -181,7 +181,7 @@
                 </p>
                 <div class="navbar">
                   <p>Price</p>
-                  <a href="#" class="btn btn-sm btn-new">Go somewhere</a>
+                  <a href="./pages/details.html#card-five" class="btn btn-sm btn-new">Go Details</a>
                 </div>
               </div>
             </div>
@@ -194,7 +194,7 @@
                 </p>
                 <div class="navbar">
                   <p>Price</p>
-                  <a href="#" class="btn btn-sm btn-new">Go somewhere</a>
+                  <a href="./pages/details.html#card-six" class="btn btn-sm btn-new">Go Details</a>
                 </div>
               </div>
             </div>
