--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <nav class="navbar line ">
 
       <form class="container-fluid justify-content-start col-12 my-3">
-        <div class="col-5 ms-3 ">
+        <div class="col-12 col-sm-5 ms-3 ">
           <img src="./assets/img/Logo Amazing Events.png" alt="logo">
         </div>
         <div class="navbar gap-3 justify-content-end col-6">
 
           <a href="#" class="btn btn-sm btn-secondary" role="button">Home</a>
-          <a href="./pages/upcoming_events.html" class="btn btn-sm  btn-outline-light" role="button"">Upcoming Events</a>
+          <a href="./pages/upcoming_events.html" class="btn btn-sm  btn-outline-light" role="button">Upcoming Events</a>
           <a href=" ./pages/past_events.html" class="btn btn-sm btn-outline-light" role="button">Past Events</a>
           <a href="./pages/contact.html" class="btn btn-sm btn-outline-light" role="button">Contact</a>
           <a href="./pages/stats.html" class="btn btn-sm btn-outline-light" role="button">Stats</a>
@@ -45,7 +45,7 @@
   <main>
     <div class=" navbar line justify-content-between">
    
-        <h1> <i class="bi bi-arrow-bar-left"></i></h1>
+         <i class="bi bi-arrow-bar-left i_start"></i>
         <div class="square one"></div>
         <div class="square two "></div>
         <div class="square three "></div>
@@ -58,48 +58,52 @@
         <div class="square three "></div>
 
 
-        <h1> <i class="bi bi-arrow-bar-right"></i></h1>
+        <i class="bi bi-arrow-bar-right i_start"></i>
       </div>
-  
+
+
 
     <nav class="navbar line">
-      <div class="container-fluid">
+     
+      <div class="container-fluid col-12 ">
+        <form class="navbar col-8 ">
         <div class="form-check ">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-          <label class="form-check-label" for="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_1" id="categorie_1">
+          <label class="form-check-label" for="categorie_1">
             Category
           </label>
         </div>
         <div class="form-check ">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-          <label class="form-check-label" for="flexCheckDefault">
+          <input class="form-check-input" type="checkbox"  name="checkbox" value="categorie_2" id="categorie_2">
+          <label class="form-check-label" for="categorie_2">
             Category
           </label>
         </div>
         <div class="form-check ">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-          <label class="form-check-label" for="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_3" id="categorie_3">
+          <label class="form-check-label" for="categorie_3">
             Category
           </label>
         </div>
         <div class="form-check ">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-          <label class="form-check-label" for="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_4" id="categorie_4">
+          <label class="form-check-label" for="categorie_4">
             Category
           </label>
         </div>
         <div class="form-check ">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-          <label class="form-check-label" for="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_5" id="categorie_5">
+          <label class="form-check-label" for="categorie_5">
             Category
           </label>
         </div>
-
-        <a class="navbar-brand">Navbar</a>
-        <form class="d-flex" role="search">
+        <button type="submit" class="btn btn-sm btn-outline-light">filter</button>
+        
+        </form>
+        <form class="d-flex  role="search">
 
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-new" type="submit">Search</button>
         </form>
       </div>
     </nav>
@@ -109,7 +113,7 @@
         <div class="carousel-item active">
 
 
-          <div class="navbar  justify-content-center gap-4 my-5">
+          <div class="navbar  justify-content-center gap-4 ">
 
 
             <div class="card m-1 " style="width: 15rem;">
@@ -169,7 +173,7 @@
 
         <!-- otra pagina -->
         <div class="carousel-item ">
-          <div class="navbar justify-content-center gap-4 my-5">
+          <div class="navbar justify-content-center gap-4 ">
 
 
 
@@ -180,7 +184,7 @@
                 <p class="card-text text-center">text description
                 </p>
                 <div class="navbar">
-                  <p>Price</p>
+                  <p>Price $ 100</p>
                   <a href="./pages/details.html#card-five" class="btn btn-sm btn-new">Go Details</a>
                 </div>
               </div>
@@ -193,7 +197,7 @@
                 <p class="card-text text-center">text description
                 </p>
                 <div class="navbar">
-                  <p>Price</p>
+                  <p>Price $1000</p>
                   <a href="./pages/details.html#card-six" class="btn btn-sm btn-new">Go Details</a>
                 </div>
               </div>
@@ -211,7 +215,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
+    </div>
   </main>
   <footer>
     <nav class="navbar">
