up-comming con modificaciones solicitadas/sin carrousel

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,7 @@
     </nav>
 
   </header>
-  <main>
+  <main class="main-up">
     <div class=" navbar line container-fluid ">
       <i class="bi bi-arrow-bar-left i_start"></i>
       <h1 class="shadow">CONTACT </h1>
