--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -26,7 +26,7 @@
     <nav class="navbar line ">
 
       <form class="container-fluid justify-content-start col-12 my-3">
-        <div class="col-5 ms-3">
+        <div class="col-12 col-sm-5 ms-3">
           <img src="../assets/img/Logo Amazing Events.png" alt="logo">
         </div>
         <div class="navbar gap-3 justify-content-end col-6">
@@ -94,11 +94,9 @@
     </nav>
 
     <!-- 1. start carousel -->
-    <div id="carouselExample" class="carousel slide">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
+  
 
-          <div class="navbar  justify-content-center gap-4 my-5">
+          <div class="navbar  justify-content-center gap-4 mt-5 main_up">
 
 
             <div class="card m-1" style="width: 15rem;">
@@ -151,13 +149,6 @@
             </div>
 
 
-          </div>
-        </div>
-
-        <!-- 2. carousel -->
-        <div class="carousel-item">
-          <div class="navbar  justify-content-center gap-4 my-5">
-
 
 
             <div class="card m-1" style="width: 15rem;">
@@ -185,19 +176,9 @@
                 </div>
               </div>
             </div>
+            
 
 
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
     </div>
   </main>
   <footer>
