se sacó clase de más

--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -96,7 +96,7 @@
     <!-- 1. start carousel -->
   
 
-          <div class="navbar  justify-content-center gap-4 mt-5 main_up">
+          <div class="navbar  justify-content-center gap-4 mt-5 ">
 
 
             <div class="card m-1" style="width: 15rem;">
