CORRECCIONES EN STATS -MARGIN

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
     </nav>
 
-    <div id="carouselExample" class="carousel slide my-5">
+    <div id="carouselExample" class="carousel slide mt-3">
       <div class="carousel-inner">
         <div class="carousel-item active">
 
