--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -23,7 +23,7 @@
   <header>
     <nav class="navbar line ">
 
-      <form class="container-fluid justify-content-start col-12 my-3">
+      <form class="container-fluid justify-content-start col-12 mt-3">
         <div class="col-12 col-sm-5 ms-3">
           <img src="../assets/img/Logo Amazing Events.png" alt="logo">
         </div>
