--- a/pages/stats.html
+++ b/pages/stats.html
@@ -40,7 +40,7 @@
     </nav>
 
   </header>
-  <main>
+  <main class="pb-3">
     <div class=" navbar line container-fluid ">
      <i class="bi bi-arrow-bar-left i_start"></i>
       <h1 class="shadow">STATS</h1>
