los scrip se cargaron el carpeta script

--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -93,90 +93,10 @@
       </div>
     </nav>
 
-    <!-- 1. start carousel -->
-  
-
-          <div class="navbar  justify-content-center gap-4 mt-5 ">
+    <!-- 1. start  -->
 
 
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Museum_Tour.jpg" class="card-img-top p-3" alt="museum">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description
-                </p>
-                <div class="navbar">
-                  <p>Price $100</p>
-                  <a href="./details.html#card-one" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Cinema.jpg" class="card-img-top p-3" alt="cinema">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description
-                </p>
-                <div class="navbar">
-                  <p>Price $100</p>
-                  <a href="./details.html#card-two" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Costume_Party.jpg" class="card-img-top p-3" alt="party">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description
-                </p>
-                <div class="navbar">
-                  <p>Price $100</p>
-                  <a href="./details.html#card-three" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Music_Concert.jpg" class="card-img-top p-3" alt="concert">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description
-                </p>
-                <div class="navbar">
-                  <p>Price $100</p>
-                  <a href="./details.html#card-four" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
-
-
-
-
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Food_Fair.jpg" class="card-img-top p-3" alt="food">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description
-                </p>
-                <div class="navbar">
-                  <p>Price $100</p>
-                  <a href="./details.html#card-five" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Marathon.jpg" class="card-img-top p-3" alt="marathon">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description
-                </p>
-                <div class="navbar">
-                  <p>Price $100</p>
-                  <a href="./details.html#card-six" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
-            
+    <div class="navbar  justify-content-center gap-4 mt-5  " id="up-event">
 
 
     </div>
@@ -206,6 +126,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+  <script src="../scripts/up.js"></script>
 
 
 </body>
