--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -43,45 +43,45 @@
     <div class=" navbar line container-fluid ">
       <i class="bi bi-arrow-bar-left i_start"></i>
       <h1 class="shadow">PAST EVENTS</h1>
-       <i class="bi bi-arrow-bar-right"></i>
+      <i class="bi bi-arrow-bar-right"></i>
     </div>
 
     <nav class="navbar line">
-     
+
       <div class="container-fluid col-12">
-        <form class="navbar col-8" >
-        <div class="form-check ">
-          <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_1" id="categorie_1">
-          <label class="form-check-label" for="categorie_1">
-            Category
-          </label>
-        </div>
-        <div class="form-check ">
-          <input class="form-check-input" type="checkbox"  name="checkbox" value="categorie_2" id="categorie_2">
-          <label class="form-check-label" for="categorie_2">
-            Category
-          </label>
-        </div>
-        <div class="form-check ">
-          <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_3" id="categorie_3">
-          <label class="form-check-label" for="categorie_3">
-            Category
-          </label>
-        </div>
-        <div class="form-check ">
-          <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_4" id="categorie_4">
-          <label class="form-check-label" for="categorie_4">
-            Category
-          </label>
-        </div>
-        <div class="form-check ">
-          <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_5" id="categorie_5">
-          <label class="form-check-label" for="categorie_5">
-            Category
-          </label>
-        </div>
-        <button type="submit" class="btn btn-sm btn-outline-light">filter</button>
-        
+        <form class="navbar col-8">
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_1" id="categorie_1">
+            <label class="form-check-label" for="categorie_1">
+              Category
+            </label>
+          </div>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_2" id="categorie_2">
+            <label class="form-check-label" for="categorie_2">
+              Category
+            </label>
+          </div>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_3" id="categorie_3">
+            <label class="form-check-label" for="categorie_3">
+              Category
+            </label>
+          </div>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_4" id="categorie_4">
+            <label class="form-check-label" for="categorie_4">
+              Category
+            </label>
+          </div>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_5" id="categorie_5">
+            <label class="form-check-label" for="categorie_5">
+              Category
+            </label>
+          </div>
+          <button type="submit" class="btn btn-sm btn-outline-light">filter</button>
+
         </form>
         <form class="d-flex" role="search">
 
@@ -91,110 +91,12 @@
       </div>
     </nav>
 
-    <div id="carouselExample" class="carousel slide my-5">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-
-          <div class="navbar justify-content-center gap-4">
 
 
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Museum_Tour.jpg" class="card-img-top p-3" alt="museum">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description
-                </p>
-                <div class="navbar">
-                  <p>Price $100</p>
-                  <a href="./details.html#card-one" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Cinema.jpg" class="card-img-top p-3" alt="cinema">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description </p>
-                <div class="navbar">
-                  <p>Price $100</p>
-                  <a href="./details.html#card-two" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Costume_Party.jpg" class="card-img-top p-3" alt="Costume_Party">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description
-                </p>
-                <div class="navbar">
-                  <p>Price $100</p>
-                  <a href="./details.html#card-three" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Music_Concert.jpg" class="card-img-top p-3" alt="concert">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description
-                </p>
-                <div class="navbar">
-                  <p>Price $100</p>
-                  <a href="./details.html#card-four" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
+    <div class="navbar justify-content-center gap-4" id="past_events">
 
 
-          </div>
-        </div>
-
-        <!-- otra pagina -->
-        <div class="carousel-item">
-          <div class="navbar bilboard justify-content-center gap-4">
-
-
-
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Food_Fair.jpg" class="card-img-top p-3" alt="food">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description
-                </p>
-                <div class="navbar">
-                  <p>Price $100</p>
-                  <a href="./details.html#card-five" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card m-1" style="width: 15rem;">
-              <img src="../assets/img/Marathon.jpg" class="card-img-top p-3" alt="marathon">
-              <div class="card-body">
-                <h5 class="card-title text-center">Title</h5>
-                <p class="card-text text-center">text description
-                </p>
-                <div class="navbar">
-                  <p>Price $ 100</p>
-                  <a href="./details.html#card-six" class="btn btn-sm btn-new">Go Details</a>
-                </div>
-              </div>
-            </div>
-
-
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
- </div>
+    </div>
   </main>
   <footer>
     <nav class="navbar">
@@ -222,6 +124,7 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
 
+  <script src="../scripts/past.js"></script>
 
 </body>
 
