correcciones en el link de las cards

--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -42,8 +42,18 @@
   <main>
     <div class=" navbar line container-fluid ">
       <i class="bi bi-arrow-bar-left i_start"></i>
+      <div class="square one"></div>
+      <div class="square two "></div>
+      <div class="square three "></div>
+      <div class="square one"></div>
       <h1 class="shadow">PAST EVENTS</h1>
-      <i class="bi bi-arrow-bar-right"></i>
+      <div class="square one"></div>
+      <div class="square two"></div>
+      <div class="square one"></div>
+      <div class="square three "></div>
+      <i class="bi bi-arrow-bar-right i_start"></i>
+
+
     </div>
 
     <nav class="navbar line">
@@ -93,7 +103,7 @@
 
 
 
-    <div class="navbar justify-content-center gap-4" id="past_events">
+    <div class="navbar justify-content-center gap-5 mt-5" id="past_events">
 
 
     </div>
