--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -44,7 +44,15 @@
   <main>
     <div class=" navbar line container-fluid ">
       <i class="bi bi-arrow-bar-left i_start"></i>
+      <div class="square one"></div>
+      <div class="square two "></div>
+      <div class="square three "></div>
+      <div class="square one"></div>
       <h1 class="shadow">UPCOMING EVENTS</h1>
+      <div class="square one"></div>
+      <div class="square two"></div>
+      <div class="square one"></div>
+      <div class="square three "></div>
       <i class="bi bi-arrow-bar-right i_start"></i>
     </div>
 
@@ -96,7 +104,7 @@
     <!-- 1. start  -->
 
 
-    <div class="navbar  justify-content-center gap-4 mt-5  " id="up-event">
+    <div class="navbar  justify-content-center gap-5 mt-5  " id="up-event">
 
 
     </div>
