--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://kit.fontawesome.com/6a58896509.css" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./assets/styles/style.css">
-  
+
 
   <title>Home</title>
 </head>
@@ -34,7 +34,8 @@
         <div class="navbar gap-3 justify-content-end col-6">
 
           <a href="#" class="btn btn-sm btn-secondary" role="button">Home</a>
-          <a href="./pages/upcoming_events.html" class="btn btn-sm  btn-outline-light" id="button-up" role="button">Upcoming Events</a>
+          <a href="./pages/upcoming_events.html" class="btn btn-sm  btn-outline-light" id="button-up"
+            role="button">Upcoming Events</a>
           <a href=" ./pages/past_events.html" class="btn btn-sm btn-outline-light" role="button">Past Events</a>
           <a href="./pages/contact.html" class="btn btn-sm btn-outline-light" role="button">Contact</a>
           <a href="./pages/stats.html" class="btn btn-sm btn-outline-light" role="button">Stats</a>
@@ -112,7 +113,7 @@
 
 
 
-    <div class="navbar  justify-content-center gap-4 " id="mixCards">
+    <div class="navbar  justify-content-center gap-5  mt-5" id="home">
 
 
     </div>
@@ -145,8 +146,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-    <script src="./scripts/script.js"></script>
-    
+  <script src="./scripts/script.js"></script>
+
 
 
 </body>
