corrigiendo responsive a 578px

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar line navbar-expand-lg">
 
       <div class="container-fluid ">
-        <div class="col-8 col-sm-5 col-ms-5 ">
+        <div class="col-8 col-md-5 col-sm-5  ms-1  ms-lg-5 ms-md-5 ms-sm-4">
           <img src="./assets/img/Logo Amazing Events.png" alt="logo">
         </div>
         <button class="navbar-toggler navbar-dark " type="button" data-bs-toggle="offcanvas"
