--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -58,11 +58,11 @@
       <i class="bi bi-arrow-bar-left i_start"></i>
       <div class="square one"></div>
       <div class="square two "></div>
-      <div class="square three  d-none d-sm-block "></div>
+      <div class="square three  d-none d-sm-none  d-md-none d-lg-block "></div>
       <div class="square one  d-none d-sm-block"></div>
       <h1 class="shadow">PAST EVENTS</h1>
       <div class="square one  d-none d-sm-block"></div>
-      <div class="square two  d-none d-sm-block"></div>
+      <div class="square two   d-none d-sm-none  d-md-none d-lg-block"></div>
       <div class="square one"></div>
       <div class="square three "></div>
       <i class="bi bi-arrow-bar-right i_start"></i>
