--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -57,12 +57,12 @@
     <div class=" navbar line container-fluid ">
       <i class="bi bi-arrow-bar-left i_start"></i>
       <div class="square one d-none d-sm-block"></div>
-      <div class="square two d-none d-sm-block"></div>
+      <div class="square two d-none d-sm-none  d-md-none d-lg-block"></div>
       <div class="square three  d-none d-sm-block "></div>
       <div class="square one "></div>
       <h1 class="shadow">UPCOMING EVENTS</h1>
       <div class="square one"></div>
-      <div class="square two  d-none d-sm-block"></div>
+      <div class="square two  d-none d-sm-none  d-md-none d-lg-block"></div>
       <div class="square one  d-none d-sm-block"></div>
       <div class="square three  d-none d-sm-block "></div>
       <i class="bi bi-arrow-bar-right i_start"></i>
