--- a/pages/details.html
+++ b/pages/details.html
@@ -57,7 +57,7 @@
   </header>
   <main class="details">
 
-
+<!-- aguardando directivas para generar el codigo apropiado -->
     <div class="container container-details" id="card-one">
       <div class="row  row-details ">
         <img class="col-8 p-3 " src="../assets/img/Museum_Tour.jpg" alt="museum">
@@ -73,82 +73,7 @@
         </div>
       </div>
     </div>
-    <div class="container container-details" id="card-two">
-      <div class="row  row-details ">
-        <img class="col-8 p-3 " src="../assets/img/Cinema.jpg" alt="cinema">
-        <div class="col-4 text-center p-3 ">
-          <h2>Name</h2>
-          <p class="pt-4 ">Date: </p>
-          <p class="pt-4 "> Description: </p>
-          <p class="pt-4 ">Category: </p>
-          <p class="pt-4 ">place: </p>
-          <p class="pt-4 ">capacity: </p>
-          <p class="pt-4 ">assistence or estimate: </p>
-          <p class="pt-4 ">price: </p>
-        </div>
-      </div>
-    </div>
-    <div class="container container-details" id="card-three">
-      <div class="row  row-details ">
-        <img class="col-6 p-5  " src="../assets/img/Costume_Party.jpg" alt="party">
-        <div class="col-6 text-center p-3 ">
-          <h2>Name</h2>
-          <p class="pt-4 ">Date: </p>
-          <p class="pt-4 "> Description: </p>
-          <p class="pt-4 ">Category: </p>
-          <p class="pt-4 ">place: </p>
-          <p class="pt-4 ">capacity: </p>
-          <p class="pt-4 ">assistence or estimate: </p>
-          <p class="pt-4 ">price: </p>
-        </div>
-      </div>
-    </div>
-    <div class="container container-details" id="card-four">
-      <div class="row  row-details ">
-        <img class="col-8 p-3 " src="../assets/img/Music_Concert.jpg" alt="concert">
-        <div class="col-4 text-center p-3 ">
-          <h2>Name</h2>
-          <p class="pt-4 ">Date: </p>
-          <p class="pt-4 "> Description: </p>
-          <p class="pt-4 ">Category: </p>
-          <p class="pt-4 ">place: </p>
-          <p class="pt-4 ">capacity: </p>
-          <p class="pt-4 ">assistence or estimate: </p>
-          <p class="pt-4 ">price: </p>
-        </div>
-      </div>
-    </div>
-    <div class="container container-details" id="card-five">
-      <div class="row  row-details ">
-        <img class="col-8 p-3 " src="../assets/img/Food_Fair.jpg" alt="food">
-        <div class="col-4 text-center p-3 ">
-          <h2>Name</h2>
-          <p class="pt-4 ">Date: </p>
-          <p class="pt-4 "> Description: </p>
-          <p class="pt-4 ">Category: </p>
-          <p class="pt-4 ">place: </p>
-          <p class="pt-4 ">capacity: </p>
-          <p class="pt-4 ">assistence or estimate: </p>
-          <p class="pt-4 ">price: </p>
-        </div>
-      </div>
-    </div>
-    <div class="container container-details" id="card-six">
-      <div class="row  row-details ">
-        <img class="col-8 p-3 " src="../assets/img/Marathon.jpg" alt="marathon">
-        <div class="col-4 text-center p-3 ">
-          <h2>Name</h2>
-          <p class="pt-4 ">Date: </p>
-          <p class="pt-4 "> Description: </p>
-          <p class="pt-4 ">Category: </p>
-          <p class="pt-4 ">place: </p>
-          <p class="pt-4 ">capacity: </p>
-          <p class="pt-4 ">assistence or estimate: </p>
-          <p class="pt-4 ">price: </p>
-        </div>
-      </div>
-    </div>
-
+    
 
 
 
