se realizó dinamico details

--- a/pages/details.html
+++ b/pages/details.html
@@ -57,21 +57,9 @@
   </header>
   <main class="details">
 
-<!-- aguardando directivas para generar el codigo apropiado -->
-    <div class="container container-details" id="card-one">
-      <div class="row  row-details ">
-        <img class="col-8 p-3 " src="../assets/img/Museum_Tour.jpg" alt="museum">
-        <div class="col-4 text-center p-3 ">
-          <h2>Name</h2>
-          <p class="pt-4 ">Date: </p>
-          <p class="pt-4 ">Description: </p>
-          <p class="pt-4 ">Category: </p>
-          <p class="pt-4 ">place: </p>
-          <p class="pt-4 ">capacity: </p>
-          <p class="pt-4 ">assistence or estimate: </p>
-          <p class="pt-4 ">price: </p>
-        </div>
-      </div>
+
+    <div class="container container-details" id="card_one">
+     
     </div>
     
 
@@ -105,6 +93,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+    <script src="../scripts/data.js"></script>
+    <script src="../scripts/details.js"></script>
 
 
 </body>
