se realizó home

--- a/index.html
+++ b/index.html
@@ -80,41 +80,11 @@
     <nav class="navbar line">
 
       <div class="container-fluid col-12 ">
-        <form class="navbar col-8 ">
-          <div class="form-check ">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_1" id="categorie_1">
-            <label class="form-check-label" for="categorie_1">
-              Category
-            </label>
-          </div>
-          <div class="form-check ">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_2" id="categorie_2">
-            <label class="form-check-label" for="categorie_2">
-              Category
-            </label>
-          </div>
-          <div class="form-check ">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_3" id="categorie_3">
-            <label class="form-check-label" for="categorie_3">
-              Category
-            </label>
-          </div>
-          <div class="form-check ">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_4" id="categorie_4">
-            <label class="form-check-label" for="categorie_4">
-              Category
-            </label>
-          </div>
-          <div class="form-check ">
-            <input class="form-check-input" type="checkbox" name="checkbox" value="categorie_5" id="categorie_5">
-            <label class="form-check-label" for="categorie_5">
-              Category
-            </label>
-          </div>
-          <button type="submit" class="btn btn-sm btn-outline-light">filter</button>
+        <form class="navbar col-8 " id="form_categories">
+          
 
         </form>
-        <form class="d-flex  role=" search">
+        <form class="d-flex"  role="search" id="search_form" >
 
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-new" type="submit">Search</button>
@@ -125,8 +95,8 @@
 
 
 
-    <div class="navbar  justify-content-center gap-5  mt-5" id="home">
-
+    <div class="navbar  justify-content-center gap-5 mx-1 mt-5"   id="home">
+      
 
     </div>
 
