se realizaron las correcciones solicitadas task 3

--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -37,16 +37,16 @@
         <div class="offcanvas offcanvas-end navbar-dark bg-dark " tabindex="-1" id="navbarOffcanvasLg"
           aria-labelledby="navbarOffcanvasLgLabel">
 
-          <div class="navbar gap-3 justify-content-end">
-
-            <a href="../index.html" class="btn  btn-outline-light" role="button">Home</a>
-            <a href="./upcoming_events.html" class="btn   btn-outline-light" role="button">Upcoming Events</a>
-            <a href=" #" class="btn  btn-secondary" role="button">Past Events</a>
-            <a href="./contact.html" class="btn  btn-outline-light" role="button">Contact</a>
-            <a href="./stats.html" class="btn  btn-outline-light" role="button">Stats</a>
-            <button type="button" class="btn-close  navbar-toggler bg-body-tertiary " data-bs-toggle="offcanvas"
-              data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
-              aria-label="Close"></button>
+          <div class="navbar gap-2 justify-content-end">
+            <button type="button" class="btn-close  navbar-toggler bg-body-tertiary  " data-bs-toggle="offcanvas"
+            data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
+            <a href="../index.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Home</a>
+            <a href="./upcoming_events.html" class="btn   btn-outline-light col-8 col-md-3 col-sm-3" role="button">Upcoming Events</a>
+            <a href=" #" class="btn  btn-secondary col-8 col-md-2 col-sm-2" role="button">Past Events</a>
+            <a href="./contact.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Contact</a>
+            <a href="./stats.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Stats</a>
+           
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
     <nav class="navbar line">
 
       <div class="container-fluid col-12 ">
-        <form class="navbar col-8 " id="form_categories">
+        <form class="navbar col-12 justify-content-end" id="form_categories">
           
 
         </form>
@@ -87,7 +87,7 @@
 
 
 
-    <div class="navbar justify-content-center gap-5 mt-5" id="past_events">
+    <div class="navbar justify-content-center  gap-5 mx-1 mt-5" id="past_events">
 
 
     </div>
