--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -26,7 +26,7 @@
     <nav class="navbar line navbar-expand-lg ">
 
       <div class="container-fluid ">
-        <div class="col-8 col-sm-5 col-ms-5">
+        <div class="col-3 col-sm-3 col-ms-3">
           <img src="../assets/img/Logo Amazing Events.png" alt="logo">
         </div>
 
@@ -34,19 +34,19 @@
           data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end navbar-dark bg-dark " tabindex="-1" id="navbarOffcanvasLg"
+        <div class="offcanvas offcanvas-end navbar-dark bg-dark col-12 col-md-12 col-sm-12abindex="-1" id="navbarOffcanvasLg"
           aria-labelledby="navbarOffcanvasLgLabel">
 
-          <div class="navbar gap-3 justify-content-end">
-
-            <a href="../index.html" class="btn  btn-outline-light" role="button">Home</a>
-            <a href="#" class="btn  btn-secondary" role="button">Upcoming Events</a>
-            <a href=" ./past_events.html" class="btn  btn-outline-light" role="button">Past Events</a>
-            <a href="./contact.html" class="btn btn-outline-light" role="button">Contact</a>
-            <a href="./stats.html" class="btn  btn-outline-light" role="button">Stats</a>
+          <div class="navbar gap-2 justify-content-end col-12 col-md-12 col-sm-12">
             <button type="button" class="btn-close  navbar-toggler bg-body-tertiary " data-bs-toggle="offcanvas"
-              data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
-              aria-label="Close"></button>
+            data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
+            <a href="../index.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Home</a>
+            <a href="#" class="btn  btn-secondary col-8 col-md-3 col-sm-3" role="button">Upcoming Events</a>
+            <a href=" ./past_events.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Past Events</a>
+            <a href="./contact.html" class="btn btn-outline-light col-8 col-md-2 col-sm-2" role="button">Contact</a>
+            <a href="./stats.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Stats</a>
+            
           </div>
         </div>
       </div>
@@ -71,7 +71,7 @@
     <nav class="navbar line">
 
       <div class="container-fluid col-12 ">
-        <form class="navbar col-8 " id="form_categories">
+        <form class="navbar col-12 justify-content-end " id="form_categories">
           
 
         </form>
@@ -85,7 +85,7 @@
     <!-- 1. start  -->
 
 
-    <div class="navbar  justify-content-center gap-5 mt-5  " id="up-event">
+    <div class="navbar  justify-content-center gap-5 mx-1 mt-5  " id="up-event">
 
 
     </div>
