--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 
     <nav class="navbar line">
 
-      <div class="container-fluid col-12 ">
-        <form class="navbar col-12 justify-content-end  " id="form_categories">
+      <div class="container-fluid col-12 justify-content-between">
+        <form class="navbar col-12 col-md-9 ustify-content-end  justify-content-md-evenly " id="form_categories">
 
 
         </form>
-        <form class="d-flex" role="search" id="search_form">
+        <form class="d-flex col-12 col-md-3" role="search" id="search_form">
 
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-new" type="submit">Search</button>
