up y past modificado

--- a/pages/details.html
+++ b/pages/details.html
@@ -23,10 +23,10 @@
 
 <body>
   <header>
-    <nav class="navbar line  navbar-expand-lg fixed-top ">
+    <nav class="navbar line  navbar-expand-lg  ">
 
-      <div class="container-fluid ">
-        <div class="col-8 col-sm-5 col-ms-5">
+      <div class="container-fluid col-12">
+        <div class="col-3 col-md-3 col-sm-3  ms-1  ms-lg-5 ms-md-5 ms-sm-4">
           <img src="../assets/img/Logo Amazing Events.png" alt="logo">
         </div>
         <button class="navbar-toggler navbar-dark " type="button" data-bs-toggle="offcanvas"
@@ -34,21 +34,22 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="offcanvas offcanvas-end navbar-dark bg-dark " tabindex="-1" id="navbarOffcanvasLg"
+        <div class="offcanvas offcanvas-end navbar-dark bg-dark col-12 col-md-12 col-sm-12 " tabindex="-1" id="navbarOffcanvasLg"
           aria-labelledby="navbarOffcanvasLgLabel">
 
 
 
-          <div class="navbar gap-3 justify-content-end">
-
-            <a href="../index.html" class="btn  btn-outline-light" role="button">Home</a>
-            <a href="./upcoming_events.html" class="btn  btn-outline-light" role="button">Upcoming Events</a>
-            <a href=" ./past_events.html" class="btn  btn-outline-light" role="button">Past Events</a>
-            <a href="./contact.html" class="btn  btn-outline-light" role="button">Contact</a>
-            <a href="./stats.html" class="btn  btn-outline-light" role="button">Stats</a>
+          <div class="navbar gap-2 justify-content-end col-12 col-md-12 col-sm-12">
             <button type="button" class="btn-close  navbar-toggler bg-body-tertiary " data-bs-toggle="offcanvas"
-              data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
-              aria-label="Close"></button>
+            data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
+
+            <a href="../index.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Home</a>
+            <a href="./upcoming_events.html" class="btn  btn-outline-light col-8 col-md-3 col-sm-3" role="button">Upcoming Events</a>
+            <a href=" ./past_events.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Past Events</a>
+            <a href="./contact.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Contact</a>
+            <a href="./stats.html" class="btn  btn-outline-light col-8 col-md-2 col-sm-2" role="button">Stats</a>
+           
           </div>
         </div>
       </div>
