--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <nav class="navbar line">
 
       <div class="container-fluid col-12 justify-content-between">
-        <form class="navbar col-12 col-md-9 ustify-content-end  justify-content-md-evenly " id="form_categories">
+        <form class="navbar col-12 col-md-9 justify-content-end  justify-content-md-evenly " id="form_categories">
 
 
         </form>
