--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -23,8 +23,8 @@
   <header>
     <nav class="navbar line navbar-expand-lg">
 
-      <div class="container-fluid">
-        <div class="col-8 col-sm-5 col-ms-5">
+      <div class="container-fluid col-12">
+        <div class="col-3 col-md-3 col-sm-3  ms-1  ms-lg-5 ms-md-5 ms-sm-4">
           <img src="../assets/img/Logo Amazing Events.png" alt="logo">
         </div>
 
@@ -34,10 +34,10 @@
         </button>
 
 
-        <div class="offcanvas offcanvas-end navbar-dark bg-dark " tabindex="-1" id="navbarOffcanvasLg"
+        <div class="offcanvas offcanvas-end navbar-dark bg-dark col-12 col-md-12 col-sm-12 " tabindex="-1" id="navbarOffcanvasLg"
           aria-labelledby="navbarOffcanvasLgLabel">
 
-          <div class="navbar gap-2 justify-content-end">
+          <div class="navbar gap-2 justify-content-end col-12 col-md-12 col-sm-12">
             <button type="button" class="btn-close  navbar-toggler bg-body-tertiary  " data-bs-toggle="offcanvas"
               data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" data-bs-dismiss="offcanvas"
               aria-label="Close"></button>
@@ -73,12 +73,12 @@
 
     <nav class="navbar line">
 
-      <div class="container-fluid col-12 ">
-        <form class="navbar col-12 justify-content-end" id="form_categories">
+      <div class="container-fluid col-12  justify-content-between">
+        <form class="navbar col-12 col-md-9 justify-content-end  justify-content-md-evenly" id="form_categories">
 
 
         </form>
-        <form class="d-flex" role="search" id="search_form">
+        <form class="d-flex col-12 col-md-3" role="search" id="search_form">
 
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-new" type="submit">Search</button>
