--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <title>Home</title>
 </head>
 
-<body>
+<body class="dark_mode" id="miBody" >
   <header>
     <nav class="navbar line navbar-expand-lg">
 
@@ -74,7 +74,7 @@
       <div class="square three "></div>
 
       <i id="felicidad">🤩</i>
-     <!-- -->  <i class="bi bi-arrow-bar-right i_start"></i>
+      <i class="bi bi-arrow-bar-right i_start"></i>
     </div>
 
 
@@ -97,7 +97,7 @@
 
 
 
-    <div class="navbar  justify-content-center gap-5 mx-1 mt-5" id="home">
+    <div class="navbar  justify-content-center gap-5 mx-1 mt-5 " id="home">
 
 
     </div>
@@ -131,7 +131,7 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
 
-  <!-- <script src="./scripts/prueba.js"></script> -->
+  <script src="./scripts/prueba.js"></script>
   
   <script src="./scripts/home.js"></script>
 
