--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
   <title>Contact</title>
 </head>
 
-<body>
+<body  class="dark_mode" id="miBody">
   <header>
     <nav class="navbar line navbar-expand-lg ">
 
@@ -58,9 +58,10 @@
   </header>
   <main class="main-up">
     <div class=" navbar line container-fluid ">
-      <i class="bi bi-arrow-bar-left i_start"></i>
-      <h1 class="shadow">CONTACT </h1>
-      <i class="bi bi-arrow-bar-right i_start"></i>
+      <i class=" col-2 bi bi-arrow-bar-left i_start"></i>
+      <h1 class="col-8 shadow text text-center">CONTACT </h1>
+      <i class="col-1 text-center" id="felicidad">🤩</i>
+      <i class="col-1 bi bi-arrow-bar-right i_start text-end"></i>
     </div>
     <form class="container-fluid contact my-5">
       <div class="mb-3">
@@ -108,6 +109,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+    <script src="../scripts/prueba.js"></script>
 
 
 </body>
